# Voice

./: .gitignore  AGENT.md
docs/: praat-command-line.md
docs/superpowers/plans/: 2026-03-24-voice-analysis-web-mvp.md
docs/superpowers/specs/: 2026-03-24-voice-analysis-web-mvp-design.md
scripts/praat/: analyze_voice.praat
server/: .env.example  README.md  pyproject.toml  run.py
server/app/: audio.py  config.py  interpreter.py  main.py  praat.py  schemas.py  storage.py
web/: package.json  pnpm-lock.yaml
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/history/: route.ts
web/app/api/history/[taskId]/ai-analysis/: route.ts
web/app/api/history/[taskId]/report/: route.ts
web/components/: voice-analysis-app.tsx
web/lib/: api.ts  history-store.ts
